--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Leke Tade",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "dotenv": "^8.1.0",
     "ejs": "^2.7.1",
